community message heading and community shimmer done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,3 +48,32 @@
   background-color: rgb(55, 255, 0);
   color: white;
 }
+
+
+
+/* community groups shimmer */
+
+/* Define the shimmer animation */
+@keyframes shimmerAnimation {
+  0% {
+    background-position: -1000px 0;
+  }
+  100% {
+    background-position: 1000px 0;
+  }
+}
+
+/* Apply the shimmer effect to the "shimmer" class */
+.shimmer {
+  background-color: #f6f7f8; /* Set this to the desired background color */
+  background-image: linear-gradient(
+    90deg,
+    #f6f7f8,
+    #e0e0e0,
+    #f6f7f8
+  ); /* Set this to a gradient of your choice */
+
+  /* Animation properties */
+  background-size: 1000px 100%;
+  animation: shimmerAnimation 1.5s infinite;
+}
